# configurable-data-analyzer

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  CONVENTIONS.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  requirements.txt
.deepseek/: config.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
bi/: __init__.py  agent.py  app.py  dashboard_store.py  data_layer.py  semantic.yaml
examples/: project.yaml
hermes-config/: .env.example  config.yaml
hermes-planning/: PRD.md  README.md  ds-tui-conversation-history.md
mcp_server/: __init__.py  analysis_templates.py  chart_renderer.py  chart_selector.py  cli.py  dashboard_html.py  dashboard_store.py  data_auditor.py  echarts_inline.py  excel_utils.py  file_classifier.py  llm_client.py  project_model.py  reference_parser.py  semantic_generator.py  semantic_query.py  semantic_validator.py  server.py  test_project_system.py
projects/: .current_project
rednote-data-analyzer-course/: _base.html  build.sh  index.html  main.js  styles.css
rednote_analyzer/: README.md  analyzer.py  comprehensive_analysis.py  explorer.py  generate_kpi_report.py  kpi_detailed_analysis.py  kpi_full_report.py  run_tests.py
report/: comprehensive_report.html  data_field_relationship_guide.md  kpi_full_dashboard.html  kpi_report.html  revenue_growth_strategy.html  span_nm_analysis_report.md  span_nm_distribution.csv  trigger_signals_deep_analysis.md  unique_span_nm.txt
tests/: .mcp_contract_snapshot.json  compare_excel_config.py  compare_full.py  compare_fuzzy.py  (+37 more)
(+111 files in other folders)
